--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,25 @@
+venv/
+dist/
 build/
+pip-wheel-metadata/
+*.egg-info/
+.idea/
+.mypy_cache/
+*.egg-info/
+*.py[cod]
+*.retry
+.bundle/
+.cache/
+.coverage
+.coverage.*
+.eggs/
+.tox/
+.pytest_cache/
+build/
+dist/
+doc/build/
+htmlcov/
+pytestdebug.log
+.python-version
+coverage.xml
+*.zip
