Add deploy step
Adds a deploy step to Travis-CI. We utilize quay.io to
host our docker images. This will upload the tagged
image to quay.io on commits to master.

--- a/tox.ini
+++ b/tox.ini
@@ -75,7 +75,7 @@ commands =
 	cd build/piedpiper-flake8-function && \
     sudo docker build \
         --pull --rm \
-        {posargs:-t afcyber-dream/piedpiper-flake8-faas:$TAG} .\
+        {posargs:-t quay.io/afcyber-dream/piedpiper-flake8-faas:$TAG} .\
     '
 whitelist_externals =
     sh
